fix sideMenu arrow overflow

--- a/Cloudents.Web/ClientApp/components/pages/layouts/sideMenu/sideMenu.less
+++ b/Cloudents.Web/ClientApp/components/pages/layouts/sideMenu/sideMenu.less
@@ -3,6 +3,10 @@
 .sideMenu{
   // margin-top: 72px !important; //we use "temporary" property in the sideMenu so margin must be configured
   overflow: visible;
+
+  .v-navigation-drawer__content {
+    overflow: unset;
+  }
   &.higherIndex{
     z-index: 250 !important;
   }
